# robosystems

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .gitignore  CLAUDE.md  COMPLIANCE.md  Dockerfile  Dockerfile.lambda  README.md  SECURITY.md  alembic.ini  compose.yaml  justfile  main.py  pyproject.toml  pytest.ini  ruff.toml
.claude/agents/: ladybug-architect.md  platform-economist.md
.claude/commands/: create-issue.md  dev.md  staged-review.md  test.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  bug_report.md  config.yml  feature.md  feature_request.md  rfc.yml  spec.md  spec.yml  task.md
.github/branch-rules/: README.md  bugfix-hotfix.json  feature.json  main.json  release.json
.github/configs/: graph.yml  kuzu.yml  stacks.yml  workers.yml
.github/workflows/: bootstrap.yml  build.yml  claude.yml  create-pr.yml  create-release.yml  deploy-api.yml  deploy-bastion.yml  deploy-dagster.yml  deploy-grafana.yml  deploy-graph-infra.yml  deploy-graph-ladybug.yml  deploy-graph-neo4j.yml  deploy-graph-volumes.yml  deploy-graph.yml  deploy-kuzu-infra.yml  deploy-kuzu-shared-replicas.yml  deploy-kuzu-volumes.yml  deploy-kuzu-writers.yml  deploy-kuzu.yml  deploy-neo4j-writers.yml  deploy-postgres-iam.yml  deploy-postgres.yml  deploy-prometheus.yml  deploy-s3.yml  deploy-valkey.yml  deploy-vpc.yml  deploy-worker-beat.yml  deploy-worker-infra.yml  deploy-worker-monitor.yml  deploy-worker.yml  deploy-workers-matrix.yml  gha-runner-maintenance.yml  gha-runner.yml  graph-asg-refresh.yml  graph-container-refresh.yml  graph-maintenance.yml  kuzu-asg-refresh.yml  kuzu-container-refresh.yml  main-test.yml  pr-test.yml  (+8 more)
alembic/: env.py
alembic/versions/: 105b5968ec40_create_billing_namespace_clean_slate.py  2bcbf00568eb_add_subgraph_support_for_enterprise_and_.py  7a35e59fc400_add_storage_breakdown_fields_to_graph_.py  7a89a1bfab0c_add_payment_provider_fields_and_.py  7bbb8648030f_rename_celery_task_id_to_operation_id.py  a1b2c3d4e5f6_add_incremental_ingestion_tracking.py  c2f378adcdb4_initialize_robosystems_iam_schema.py  c4cc411768f2_drop_user_usage_tracking_table.py  c52984bde339_add_expires_at_column_to_user_api_keys.py  c60644793c3b_add_graph_schemas_graph_tables_graph_.py  db62e86988de_consolidate_graphs_and_repositories_.py  e40df94401d2_org_billing_subscriptions_invoices.py  e7a936dc8024_add_user_tokens_table_for_email_.py  ebb9b6f57088_remove_deprecated_credit_multiplier_.py
cloudformation/: api.yaml  aws-cur.yml  bastion.yaml  beat.yaml  cloudtrail.yaml  dagster.yaml  gha-runner.yaml  grafana.yaml  graph-infra.yaml  graph-ladybug-replicas.yaml  graph-ladybug.yaml  graph-neo4j.yaml  graph-volumes.yaml  kuzu-infra.yaml  kuzu-shared-replicas.yaml  kuzu-volumes.yaml  kuzu-writers.yaml  neo4j-writers.yaml  postgres.yaml  s3.yaml  valkey.yaml  vpc.yaml  waf.yaml  worker-infra.yaml  worker-monitor.yaml  worker.yaml
dagster_home/: dagster.yaml  dagster_prod.yaml
examples/: .gitignore  README.md  __init__.py
examples/_shared/: credential_utils.py
examples/accounting_demo/: 01_setup_credentials.py  02_create_graph.py  03_generate_data.py  04_upload_ingest.py  05_query_graph.py  QUICKSTART.md  README.md  main.py
examples/credentials/: main.py  utils.py
examples/custom_graph_demo/: .gitignore  01_setup_credentials.py  02_create_graph.py  03_generate_data.py  04_upload_ingest.py  05_query_graph.py  QUICKSTART.md  README.md  main.py  schema.json
examples/element_mapping_demo/: 01_setup_credentials.py  02_create_graph.py  03_generate_data.py  04_upload_ingest.py  05_query_graph.py  06_create_subgraph.py  07_test_views.py  08_save_view_as_report.py  README.md  main.py
examples/sec_demo/: README.md  main.py  query_examples.py
robosystems/: celery.py  database.py  exceptions.py  logger.py
robosystems/adapters/: README.md  __init__.py  arelle.py  openfigi.py  qb.py  s3.py  ses.py
robosystems/admin/: README.md  __init__.py  cli.py  ssm_executor.py
robosystems/config/: README.md  __init__.py  agents.py  aws.py  constants.py  credits.py  env.py  external_services.py  graph_tier.py  logging.py  openapi_tags.py  query_queue.py  rate_limits.py  secrets_manager.py  tier_config.py  validation.py  valkey_registry.py
robosystems/dagster/: README.md  __init__.py  definitions.py
robosystems/graph_api/: README.md  __init__.py  __main__.py  app.py  cli.py  main.py
robosystems/kuzu_api/: README.md  __init__.py  __main__.py  app.py  cli.py  main.py
robosystems/middleware/: __init__.py  database.py  logging.py
robosystems/models/: __init__.py
robosystems/operations/: README.md  __init__.py  connection_service.py  user_limits_service.py
robosystems/processors/: README.md  __init__.py  qb_transactions.py  schedule.py  schema_ingestion.py  schema_processor.py  trial_balance.py  xbrl_graph.py
robosystems/routers/: __init__.py  offering.py  operations.py  status.py
robosystems/schemas/: README.md  __init__.py  base.py  builder.py  custom.py  installer.py  loader.py  manager.py  models.py  parser.py  validator.py
robosystems/scripts/: admin_cli.py  arelle_cache_manager.py  clear_valkey_queues.py  create_test_user.py  credit_admin.py  db_manager.py  duckdb_query.py  graph_health.py  graph_query.py  kuzu_query.py  lbug_query.py  manage_dlq.py  repository_access_manager.py  sec_local.py  sec_local_health.py  sec_orchestrator.py  sec_pipeline.py  tables_query.py
robosystems/security/: __init__.py  audit_logger.py  auth_protection.py  captcha.py  cypher_analyzer.py  device_fingerprinting.py  encryption.py  error_handling.py  input_validation.py  password.py
robosystems/tasks/: README.md  __init__.py  dlq.py  schedule.py
robosystems/utils/: __init__.py  docs_template.py  html_parser.py  path_validation.py  query_output.py  ulid.py  uuid.py
static/: description.md  graph-api-description.md  kuzu-api-description.md  swagger-custom.css
tests/: README.md  __init__.py  conftest.py  test_exceptions.py  test_subgraph_fork.py
tests/adapters/: test_arelle.py  test_openfigi.py  test_qb.py  test_s3_backup.py  test_sec.py  test_ses.py
(+889 files in other folders)
